tutorial 2: update 3: home, router and fix width
- fixed widht on css, causing horizontal scrolling.
- added home page
- added router needed dependencies
- added router definition
- refactor server and ui acording to router
- documentation: changed and added some sections

--- a/www/style.css
+++ b/www/style.css
@@ -30,6 +30,10 @@ body {
   height: 44px;
 }
 
+.ms-xl12 {
+    width: 95%; /* fix width issue of scrolling */
+}
+
 /* container declarations ---------------------------------------------- */
 .grid-container {
   display: grid;
